# skycompress

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_type_sort.yml  python-package.yml
image_compression/: compress_image.py
skycompress/: __init__.py  compress_image.py
tests/: test_compression.py
