[tool.poetry]
name = "skycompress"
version = "0.1.0"
description = "Compress the image with binary search algorithm to find best fit dimension and quality"
authors = ["Goksel Ozgur <gozgur@novit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
opencv-python = "^4.6.0.66"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = tests
