[tool.poetry]
name = "skycompress"
version = "0.1.0"
description = "Compress the image with binary search algorithm to find best fit dimension and quality"
authors = ["Goksel Ozgur <gozgur@novit.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0"
opencv-python = "^4.6.0.66"
pytest = "^7.4.2"
PyTurboJPEG = "1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = "tests"
